fix: make the font color of the header be visible to any browser

--- a/frontend/src/components/admin/AdminHome.css
+++ b/frontend/src/components/admin/AdminHome.css
@@ -15,7 +15,7 @@
   color: white;
   background: #47abd8;
   cursor: pointer;
-  transition: ease 0.20s;
+  transition: ease 0.25s;
 }
 
 .bg{
